build/game.output
Grammar

    0 $accept: Game $end

    1 Game: CH1

    2 $@1: %empty

    3 CH1: a $@1 CH2
    4    | b

    5 $@2: %empty

    6 CH2: c $@2 CH3
    7    | d

    8 $@3: %empty

    9 CH3: e $@3 CH4
   10    | f
   11    | g
   12    | h

   13 $@4: %empty

   14 CH4: i $@4 BONUS
   15    | j

   16 BONUS: k
   17      | j


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    a (258) 3
    b (259) 4
    c (260) 6
    e (261) 9
    f (262) 10
    g (263) 11
    h (264) 12
    i (265) 14
    k (266) 16
    d <integer> (267) 7
    j <string> (268) 15 17


Nonterminals, with rules where they appear

    $accept (14)
        on left: 0
    Game (15)
        on left: 1
        on right: 0
    CH1 (16)
        on left: 3 4
        on right: 1
    $@1 (17)
        on left: 2
        on right: 3
    CH2 (18)
        on left: 6 7
        on right: 3
    $@2 (19)
        on left: 5
        on right: 6
    CH3 (20)
        on left: 9 10 11 12
        on right: 6
    $@3 (21)
        on left: 8
        on right: 9
    CH4 (22)
        on left: 14 15
        on right: 9
    $@4 (23)
        on left: 13
        on right: 14
    BONUS (24)
        on left: 16 17
        on right: 14


State 0

    0 $accept: . Game $end

    a  shift, and go to state 1
    b  shift, and go to state 2

    Game  go to state 3
    CH1   go to state 4


State 1

    3 CH1: a . $@1 CH2

    $default  reduce using rule 2 ($@1)

    $@1  go to state 5


State 2

    4 CH1: b .

    $default  reduce using rule 4 (CH1)


State 3

    0 $accept: Game . $end

    $end  shift, and go to state 6


State 4

    1 Game: CH1 .

    $default  reduce using rule 1 (Game)


State 5

    3 CH1: a $@1 . CH2

    c  shift, and go to state 7
    d  shift, and go to state 8

    CH2  go to state 9


State 6

    0 $accept: Game $end .

    $default  accept


State 7

    6 CH2: c . $@2 CH3

    $default  reduce using rule 5 ($@2)

    $@2  go to state 10


State 8

    7 CH2: d .

    $default  reduce using rule 7 (CH2)


State 9

    3 CH1: a $@1 CH2 .

    $default  reduce using rule 3 (CH1)


State 10

    6 CH2: c $@2 . CH3

    e  shift, and go to state 11
    f  shift, and go to state 12
    g  shift, and go to state 13
    h  shift, and go to state 14

    CH3  go to state 15


State 11

    9 CH3: e . $@3 CH4

    $default  reduce using rule 8 ($@3)

    $@3  go to state 16


State 12

   10 CH3: f .

    $default  reduce using rule 10 (CH3)


State 13

   11 CH3: g .

    $default  reduce using rule 11 (CH3)


State 14

   12 CH3: h .

    $default  reduce using rule 12 (CH3)


State 15

    6 CH2: c $@2 CH3 .

    $default  reduce using rule 6 (CH2)


State 16

    9 CH3: e $@3 . CH4

    i  shift, and go to state 17
    j  shift, and go to state 18

    CH4  go to state 19


State 17

   14 CH4: i . $@4 BONUS

    $default  reduce using rule 13 ($@4)

    $@4  go to state 20


State 18

   15 CH4: j .

    $default  reduce using rule 15 (CH4)


State 19

    9 CH3: e $@3 CH4 .

    $default  reduce using rule 9 (CH3)


State 20

   14 CH4: i $@4 . BONUS

    k  shift, and go to state 21
    j  shift, and go to state 22

    BONUS  go to state 23


State 21

   16 BONUS: k .

    $default  reduce using rule 16 (BONUS)


State 22

   17 BONUS: j .

    $default  reduce using rule 17 (BONUS)


State 23

   14 CH4: i $@4 BONUS .

    $default  reduce using rule 14 (CH4)
